# NeoPanel-AndroidEUI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  NOTICE  README.md  README.zh-CN.md  build_android.ps1  deploy_example.sh
app/: android_window_backend_panel.cpp  main.cpp
cmake/: embed_binary.cmake  vulkan_portability_compat.h
docs/: BUILD_AND_RUN.md  GITHUB_RELEASE_CHECKLIST.md  PORTING.md  PORTING.zh-CN.md  SIZE_OPTIMIZATION.md
docs/porting/: assets.md  cmake.md  input.md  surface.md  vulkan.md
scripts/: prepare_upstream.ps1  verify_elf.ps1
src/: main.cpp
src/eui_android_elf/core/input/: input_state.h
src/eui_android_elf/core/platform/android/native_surface/: ANativeWindowCreator.h
src/eui_android_elf/core/render/vulkan/: vulkan_backend.cpp
src/eui_android_elf/core/window/: android_window_backend_panel.cpp
src/neopanel/: embedded_assets.h  main.cpp
